--- a/bikeData.html
+++ b/bikeData.html
@@ -14,6 +14,6 @@
     <nav></nav>
     <main></main>
    
-    <script src="bikeFilter.js"></script>
+    <script src="bikefilter.js"></script>
   </body>
 </html>
