--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="bikeData.css" />
+    <link rel="stylesheet" href="sportdata.css" />
   </head>
   <body>
     <nav></nav>
     <main></main>
 
-    <script src="bikefilter.js"></script>
+    <script src="sportfilter.js"></script>
   </body>
 </html>
