--- a/sportdata.html
+++ b/sportdata.html
@@ -7,13 +7,13 @@
     <title>Bike Share filtering </title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="bikeData.css"/>
+    <link rel="stylesheet" href="sportdata.css"/>
     <link rel="stylesheet" href="index.css"/>
   </head>
   <body>
     <nav></nav>
     <main></main>
    
-    <script src="bikefilter.js"></script>
+    <script src="sportfilter.js"></script>
   </body>
 </html>
