--- a/sportdata.html
+++ b/sportdata.html
@@ -17,3 +17,7 @@
     <script src="sportfilter.js"></script>
   </body>
 </html>
+
+
+<!-- Checkbox:Teamvs Team or eventSport -->
+<!-- Dropdown: type of sports eg. soccer,basketball,fighting -->
