--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Bike Share App</title>
+    <title>Sport Choice App</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
@@ -13,7 +13,7 @@
   <body>
     <nav></nav>
     <main></main>
-
-    <script src="sportfilter.js"></script>
+<footer></footer>
+    <script src="index.js"></script>
   </body>
 </html>
