--- a/sportdata.html
+++ b/sportdata.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Bike Share filtering </title>
+    <title>Sport Choice filter </title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="sportdata.css"/>
@@ -13,7 +13,7 @@
   <body>
     <nav></nav>
     <main></main>
-   
+   <footer></footer>
     <script src="sportfilter.js"></script>
   </body>
 </html>
