--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
       crossorigin="anonymous"
     />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-<footer>
     <link rel="stylesheet" href="index.Css" />
     <link rel="stylesheet" href="sportdata.Css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Sport Choice</a>
         <button
           class="navbar-toggler"
           type="button"
