--- a/sportdata.html
+++ b/sportdata.html
@@ -51,86 +51,10 @@
       </div>
     </nav>
 
-    <div class="dropcheck">
-      <div class="row">
-        <div class="col-sm-12 col-lg-3">
-          <input type="checkbox" id="sporttype" name="sport" value="sport" />
-          <label for="sport1">TeamSport</label><br />
-          <input type="checkbox" id="eventype" name="event" value="event" />
-          <label for="event1">EventSport</label><br />
-        </div>
-        <div class="col-sm-12 col-lg-3">
-          <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">
-              Sports Choice
-            </button>
-            <div id="myDropdown" class="dropdown-content">
-              <input
-                type="text"
-                placeholder="Search.."
-                id="myInput"
-                onkeyup="filterFunction()"
-              />
-              <a href="#about">About</a>
-              <a href="#base">Base</a>
-              <a href="#blog">Blog</a>
-              <a href="#contact">Contact</a>
-              <a href="#custom">Custom</a>
-              <a href="#support">Support</a>
-              <a href="#tools">Tools</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+   
+<div id="my-list">
 
-    <table style="width: 100%">
-      <tr>
-        <th>Sports Name</th>
-        <th>Event type</th>
-        <th>Image</th>
-      </tr>
-      <tr>
-        <td>Jill</td>
-        <td>Smith</td>
-        <td>50</td>
-      </tr>
-      <tr>
-        <td>Eve</td>
-        <td>Jackson</td>
-        <td>94</td>
-      </tr>
-      <tr>
-        <td>Eve</td>
-        <td>Jackson</td>
-        <td>94</td>
-      </tr>
-      <tr>
-        <td>Eve</td>
-        <td>Jackson</td>
-        <td>94</td>
-      </tr>
-      <tr>
-        <td>Eve</td>
-        <td>Jackson</td>
-        <td>94</td>
-      </tr>
-      <tr>
-        <td>Eve</td>
-        <td>Jackson</td>
-        <td>94</td>
-      </tr>
-      <tr>
-        <td>Eve</td>
-        <td>Jackson</td>
-        <td>94</td>
-      </tr>
-      <tr>
-        <td>Eve</td>
-        <td>Jackson</td>
-        <td>94</td>
-      </tr>
-    </table>
+
 
     <footer>
       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -144,9 +68,9 @@
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"
     ></script>
-    <script src="sportdata.js"></script>
-    <script src="sportfilter.js"></script>
-    <script src="playdata.js"></script>
+  
+    
+    
   </body>
 </html>
 
