--- a/sportdata.html
+++ b/sportdata.html
@@ -43,8 +43,11 @@
                 >Home</a
               >
             </li>
+             <li class="nav-item">
+              <a class="nav-link" href="about.html">about us</a>
+            </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="contact.Html">Contact us</a>
             </li>
           </ul>
         </div>
