--- a/sportdata.html
+++ b/sportdata.html
@@ -53,15 +53,15 @@
       </div>
     </nav>
 
-    <ul class="dropcheck">
+    <div class="dropcheck">
       <div class="row">
-        <div class="col-sm-3 col-lg-4">
+        <div class="col-sm-4 col-lg-4">
           <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
           <label for="vehicle1"> I have a bike</label><br />
           <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
           <label for="vehicle2"> I have a car</label><br />
         </div>
-        <div class="col-sm-3 col-lg-4">
+        <div class="col-sm-4 col-lg-4">
           <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
             <div class="dropdown-content">
@@ -71,11 +71,12 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3 col-lg-4">
+        <div class="col-sm-4 col-lg-4">
           <input type="submit" value="Submit" />
         </div>
       </div>
-    </ul>
+    </div>
+
     <p id="success"></p>
     <p id="error"></p>
     <p id="loading">Loading...</p>
