--- a/sportdata.html
+++ b/sportdata.html
@@ -55,13 +55,13 @@
 
     <div class="dropcheck">
       <div class="row">
-        <div class="col-sm-4 col-lg-4">
+        <div class="col-sm-12 col-lg-6">
           <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
-          <label for="vehicle1"> I have a bike</label><br />
+          <label for="vehicle1"> TeamSport</label><br />
           <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
-          <label for="vehicle2"> I have a car</label><br />
+          <label for="vehicle2"> SoloSport</label><br />
         </div>
-        <div class="col-sm-4 col-lg-4">
+        <div class="col-sm-12 col-lg-6">
           <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
             <div class="dropdown-content">
@@ -70,9 +70,6 @@
               <a href="#">Link 3</a>
             </div>
           </div>
-        </div>
-        <div class="col-sm-4 col-lg-4">
-          <input type="submit" value="Submit" />
         </div>
       </div>
     </div>
