--- a/sportdata.html
+++ b/sportdata.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <meta charset="utf-8" />
@@ -56,18 +55,20 @@
     <div class="dropcheck">
       <div class="row">
         <div class="col-sm-12 col-lg-6">
-          <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
-          <label for="vehicle1"> TeamSport</label><br />
-          <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
-          <label for="vehicle2"> SoloSport</label><br />
+          <h6>SportsFormat<h6>
+          <input type="checkbox" id="teamsport" name="vehicle1" value="Bike" />
+          <label for="teamsport"> TeamSport</label><br />
+          <input type="checkbox" id="solosport" name="vehicle2" value="Car" />
+          <label for="solosport"> SoloSport</label><br />
         </div>
         <div class="col-sm-12 col-lg-6">
           <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
+            <h6>SportsName</h6>
+            <button class="dropbtn">SportsName</button>
             <div class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="#">basketball</a>
+              <a href="#">soccer</a>
+              <a href="#">cricket</a>
             </div>
           </div>
         </div>
