--- a/sportdata.html
+++ b/sportdata.html
@@ -16,7 +16,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.Css" />
+    <link rel="stylesheet" href="index.Css"/>
     <link rel="stylesheet" href="sportdata.Css" />
   </head>
   <body>
@@ -94,6 +94,7 @@
     ></script>
 
     <script src="sportdata.js"></script>
+    <script src="sportsfilter.js"></script>
   </body>
 </html>
 
