--- a/sportdata.html
+++ b/sportdata.html
@@ -98,5 +98,10 @@
   </body>
 </html>
 
-<!-- Checkbox:Teamvs Team or eventSport [strFormat] -->
-<!-- Dropdown: type of sports eg. soccer,basketball,fighting  [strSport] -->
+<!-- Checkbox:Teamvs Team or eventSport [strFormat] on selecting  
+   one of these should show name and descrition of all sports of  this particular event type.-->
+
+<!-- Dropdown: type of sports eg. soccer,basketball,fighting  [strSport] selcting this should 
+  show all the detsils of the particular sport   -->
+
+  <!--combining filters: this should show both check box and dropdown. eg eventsport and basketball.-->
