--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <footer>
       <a href="#"><i class="fa fa-facebook"></i></a>
+      <a href="#"><i class="fa fa-instagram"></i></a>
       <a href="#"><i class="fa fa-twitter"></i></a>
       <a href="#"><i class="fa fa-linkedin"></i></a>
       <a href="#"><i class="fa fa-google-plus"></i></a>
