--- a/sportdata.html
+++ b/sportdata.html
@@ -56,9 +56,9 @@
       <div class="row">
         <div class="col-sm-12 col-lg-6">
           <h6>SportsFormat<h6>
-          <input type="checkbox" id="teamsport" name="vehicle1" value="Bike" />
+          <input type="checkbox" id="teamsport" name="vehicle1" value="TeamSport" />
           <label for="teamsport"> TeamSport</label><br />
-          <input type="checkbox" id="solosport" name="vehicle2" value="Car" />
+          <input type="checkbox" id="solosport" name="vehicle2" value="eventSport" />
           <label for="eventsport"> eventSport</label><br />
         </div>
         <div class="col-sm-12 col-lg-6">
