--- a/about.Html
+++ b/about.Html
@@ -54,10 +54,9 @@
     </nav>
     <div class="about-section">
       <h1>About Us Page</h1>
-      <p>Some text about who we are and what we do.</p>
+      <p> Welcome to sports list selection</p>
       <p>
-        Resize the browser window to see that this page is responsive by the
-        way.
+        Our team here will be happy asist you
       </p>
     </div>
 
