--- a/sportdata.html
+++ b/sportdata.html
@@ -56,14 +56,14 @@
       <div class="row">
         <div class="col-sm-12 col-lg-6">
           <h6>SportsFormat<h6>
-          <input type="checkbox" id="teamsport" name="vehicle1" value="TeamSport" />
+          <input type="checkbox" id="teamsport" name="team" value="TeamSport" />
           <label for="teamsport"> TeamSport</label><br />
-          <input type="checkbox" id="solosport" name="vehicle2" value="eventSport" />
+          <input type="checkbox" id="solosport" name="solo" value="eventSport" />
           <label for="eventsport"> eventSport</label><br />
         </div>
         <div class="col-sm-12 col-lg-6">
            <label for="selectdrop">Choose a sport</label>
-  <select name="dropdown" id="selectdrop">
+  <select name="dropdown" id="selectDrop">
     <option value="all" id="alldrop">All sports</option>
   </select>
         </div>
