--- a/sportdata.html
+++ b/sportdata.html
@@ -116,3 +116,12 @@
   show all the detsils of the particular sport   -->
 
   <!--combining filters: this should show both check box and dropdown. eg eventsport and basketball.-->
+
+
+  <!-- // 0. write comment for the code.
+// 1.show image in image box.
+// 2.show more show less in description.
+// 3.show collected data in the new page for contact us page.
+// 4.Sticky navbar
+// 5. Home page
+// 6. margin bottom -->
